--- a/src/index.html
+++ b/src/index.html
@@ -1,81 +1,130 @@
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/main.css">
-  <title>Training insurance</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./assets/main.css">
+	<title>Training insurance</title>
 </head>
 <body>
-  <header class="main-header">
-    <div>
-      <a class="brand-logo">
-        <img src="" alt="">
-      </a>
-      <a>My financial consultant</a>
-      <div class="dropdown">
-        <i class="phone-icon"></i>
-        <a>067-344-44-44</a>
-      </div>
-      <a class="one-click-order">One click order</a>
-      <div class="search">
-        <i class="icon-search"></i>
-      </div>
-    </div>
-    <nav class="main-nav">
-      <a href="">Insurance</a>
-      <a href="">Finances</a>
-      <a href="">Feedbacks</a>
-      <a href="">News</a>
-    </nav>
-  </header>
-  <main class="main-content">
-    <div class="hero-block">
-      <ul class="hero-block-nav">
-        <li><a href=""><i class="icon-"></i>OSAGO</a></li>
-        <li><a href=""><i class="icon-"></i>Tourism insurance</a></li>
-        <li><a href=""><i class="icon-"></i>Credits</a></li>
-        <li><a href=""><i class="icon-"></i>Bank cells</a></li>
-        <li><a href=""><i class="icon-"></i>Green card</a></li>
-      </ul>
-      <p>Compare </br> and buy the best solution</p>
-    </div>
+	<div class="wrapper">
+	<header class="main-header">
+		<div>
+			<a class="brand-logo">
+				<img src="" alt="">
+			</a>
+			<a>My financial consultant</a>
+			<div class="dropdown">
+				<i class="phone-icon"></i>
+				<a>067-344-44-44</a>
+			</div>
+			<a class="one-click-order">One click order</a>
+			<div class="search">
+				<i class="icon-search"></i>
+			</div>
+		</div>
+		<nav class="main-nav">
+			<a href="">Insurance</a>
+			<a href="">Finances</a>
+			<a href="">Feedbacks</a>
+			<a href="">News</a>
+		</nav>
+	</header>
+	<main class="main-content">
+		<div class="hero-block">
+			<ul class="hero-block-nav">
+				<li><a href=""><i class="icon-"></i>OSAGO</a></li>
+				<li><a href=""><i class="icon-"></i>Tourism insurance</a></li>
+				<li><a href=""><i class="icon-"></i>Credits</a></li>
+				<li><a href=""><i class="icon-"></i>Bank cells</a></li>
+				<li><a href=""><i class="icon-"></i>Green card</a></li>
+			</ul>
+			<p>Compare </br> and buy the best solution</p>
+		</div>
 
-    <div>
-      <div class="linkinator">
-        <header></header>
-        <ul class="linkinator-body"></ul>
-      </div>
-      <div class="linkinator">
-        <header></header>
-        <ul class="linkinator-body"></ul>
-      </div>
-      <div class="linkinator">
-        <header></header>
-        <ul class="linkinator-body"></ul>
-      </div>
-    </div>
+		<div class="services-section">
+			<div class="linkinator">
+				<header class="linkinator-header title">Insurance</header>
+				<ul class="linkinator-body">
+					<li>
+						<a href=""><i class="icon-"></i>Services</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Feedbacks</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Ratings</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Insurance companies</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Special offers</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Insurance lawyer</a>
+					</li>
+				</ul>
+			</div>
+			<div class="linkinator">
+				<header class="linkinator-header">Finances</header>
+				<ul class="linkinator-body">
+					<li>
+						<a href=""><i class="icon-"></i>Services</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Feedbacks</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Ratings</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Banks</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Special offers</a>
+					</li>
+				</ul>
+			</div>
+			<div class="linkinator">
+				<header class="linkinator-header">New Services</header>
+				<ul class="linkinator-body">
+					<li>
+						<a href=""><i class="icon-"></i>OSAGO</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Travel insurance</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Loans</a>
+					</li>
+					<li>
+						<a href=""><i class="icon-"></i>Bank cells</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 
-    <div>
-      <div>
-        <div class="title"></div>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
-      <p>You save your money with us</p>
-    </div>
+		<div>
+			<div>
+				<div class="title"></div>
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+			<p>You save your money with us</p>
+		</div>
 
-    <div class="about-project">
-      <div class="title"></div>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-  </main>
-  <footer class="main-footer"></footer>
+		<div class="about-project">
+			<div class="title"></div>
+			<p></p>
+			<p></p>
+			<p></p>
+		</div>
+	</main>
+	<footer class="main-footer">Я футер :)</footer>
 </body>
 </html>
