--- a/src/index.html
+++ b/src/index.html
@@ -3,128 +3,131 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/main.css">
+	<link rel="stylesheet" href="css\iconsfont.css">
+	<link rel="stylesheet" href="css\main.css">
 	<title>Training insurance</title>
 </head>
 <body>
 	<div class="wrapper">
-	<header class="main-header">
-		<div>
-			<a class="brand-logo">
-				<img src="" alt="">
-			</a>
-			<a>My financial consultant</a>
-			<div class="dropdown">
-				<i class="phone-icon"></i>
-				<a>067-344-44-44</a>
+		<header class="main-header">
+			<div class="main-header__wrapper">
+				<a class="brand-logo">
+					<img src="/src/img/logo.png" alt="Logo FinStore">
+				</a>
+				<i class="_icon-chat"></i>
+				<a href="#" class="consult-chat">My financial consultant</a>
+				<div class="dropdown">
+					<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44</a>
+				</div>
+				<a href="#" class="one-click-order">One click order</a>
+				<div class="search">
+					<i class="_icon-search"></i>
+				</div>
 			</div>
-			<a class="one-click-order">One click order</a>
-			<div class="search">
-				<i class="icon-search"></i>
+			<nav class="main-nav">
+				<a href="#" class="main-nav__btn">Insurance</a>
+				<a href="#" class="main-nav__btn">Finances</a>
+				<a href="#" class="main-nav__link">Feedbacks</a>
+				<a href="#" class="main-nav__link">News</a>
+			</nav>
+		</header>
+		<main class="main-content">
+			<div class="hero-block">
+				<ul class="hero-block-nav">
+					<li><a href=""><i class="icon-"></i>OSAGO</a></li>
+					<li><a href=""><i class="icon-"></i>Tourism insurance</a></li>
+					<li><a href=""><i class="icon-"></i>Credits</a></li>
+					<li><a href=""><i class="icon-"></i>Bank cells</a></li>
+					<li><a href=""><i class="icon-"></i>Green card</a></li>
+				</ul>
+				<p>Compare </br> and buy the best solution</p>
 			</div>
-		</div>
-		<nav class="main-nav">
-			<a href="">Insurance</a>
-			<a href="">Finances</a>
-			<a href="">Feedbacks</a>
-			<a href="">News</a>
-		</nav>
-	</header>
-	<main class="main-content">
-		<div class="hero-block">
-			<ul class="hero-block-nav">
-				<li><a href=""><i class="icon-"></i>OSAGO</a></li>
-				<li><a href=""><i class="icon-"></i>Tourism insurance</a></li>
-				<li><a href=""><i class="icon-"></i>Credits</a></li>
-				<li><a href=""><i class="icon-"></i>Bank cells</a></li>
-				<li><a href=""><i class="icon-"></i>Green card</a></li>
-			</ul>
-			<p>Compare </br> and buy the best solution</p>
-		</div>
 
-		<div class="services-section">
-			<div class="linkinator">
-				<header class="linkinator-header title">Insurance</header>
-				<ul class="linkinator-body">
-					<li>
-						<a href=""><i class="icon-"></i>Services</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Feedbacks</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Ratings</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Insurance companies</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Special offers</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Insurance lawyer</a>
-					</li>
-				</ul>
+			<div class="services-section">
+				<div class="linkinator">
+					<header class="linkinator-header title">Insurance</header>
+					<ul class="linkinator-body">
+						<li>
+							<a href=""><i class="_icon-services"></i>Services</a>
+						</li>
+						<li>
+							<a href=""><i class="_icon-feedback"></i>Feedbacks</a>
+						</li>
+						<li>
+							<a href=""><i class="_icon-rating"></i>Ratings</a>
+						</li>
+						<li>
+							<a href=""><i class="_icon-company"></i>Insurance companies</a>
+						</li>
+						<li>
+							<a href=""><i class="_icon-star"></i>Special offers</a>
+						</li>
+						<li>
+							<a href=""><i class="_icon-lower"></i>Insurance lawyer</a>
+						</li>
+					</ul>
+				</div>
+				<div class="linkinator">
+					<header class="linkinator-header title">Finances</header>
+					<ul class="linkinator-body">
+						<li>
+							<a href="#"><i class="_icon-services"></i>Services</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-feedback"></i>Feedbacks</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-rating"></i>Ratings</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-banklandmark"></i>Banks</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-star"></i>Special offers</a>
+						</li>
+					</ul>
+				</div>
+				<div class="linkinator">
+					<header class="linkinator-header title">New Services</header>
+					<ul class="linkinator-body">
+						<li>
+							<a href="#"><i class="_icon-house"></i>OSAGO</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-baggage"></i>Travel insurance</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-icon-portmone"></i>Loans</a>
+						</li>
+						<li>
+							<a href="#"><i class="_icon-bank-box"></i>Bank cells</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div class="linkinator">
-				<header class="linkinator-header">Finances</header>
-				<ul class="linkinator-body">
-					<li>
-						<a href=""><i class="icon-"></i>Services</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Feedbacks</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Ratings</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Banks</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Special offers</a>
-					</li>
-				</ul>
-			</div>
-			<div class="linkinator">
-				<header class="linkinator-header">New Services</header>
-				<ul class="linkinator-body">
-					<li>
-						<a href=""><i class="icon-"></i>OSAGO</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Travel insurance</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Loans</a>
-					</li>
-					<li>
-						<a href=""><i class="icon-"></i>Bank cells</a>
-					</li>
-				</ul>
-			</div>
-		</div>
 
-		<div>
 			<div>
-				<div class="title"></div>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
+				<div>
+					<div class="title"></div>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+				<p>You save your money with us</p>
 			</div>
-			<p>You save your money with us</p>
-		</div>
 
-		<div class="about-project">
-			<div class="title"></div>
-			<p></p>
-			<p></p>
-			<p></p>
-		</div>
-	</main>
-	<footer class="main-footer">Я футер :)</footer>
+			<div class="about-project">
+				<div class="title"></div>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+		</main>
+		<footer class="main-footer">Я футер :)
+		</footer>
+	</div>
 </body>
 </html>
