add margin in header-block

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 					<img src="/src/img/logo.png" alt="Logo FinStore">
 				</a>
 				<i class="_icon-chat"></i>
-				<a href="#" class="consult-chat">My financial consultant</a>
+				<a href="#" class="link-consult-chat">My financial consultant</a>
 				<div class="dropdown">
 					<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44</a>
 				</div>
