update margin for header

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
 				<a class="brand-logo">
 					<img src="/src/img/logo.png" alt="Logo FinStore">
 				</a>
-				<i class="_icon-chat"></i>
-				<a href="#" class="link-consult-chat">My financial consultant</a>
+				<div class="consult-chat">
+					<i class="_icon-chat"></i>
+					<a href="#" class="link-consult-chat">My financial consultant</a>
+				</div>
 				<div class="dropdown">
 					<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44</a>
 				</div>
