arrow changes in the block linkenator

--- a/src/index.html
+++ b/src/index.html
@@ -50,22 +50,34 @@
 					<header class="linkinator-header title">Insurance</header>
 					<ul class="linkinator-body">
 						<li>
-							<a href=""><i class="_icon-services"></i>Services</a>
+							<a href=""><i class="_icon-services"></i>Services
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-feedback"></i>Feedbacks</a>
+							<a href=""><i class="_icon-feedback"></i>Feedbacks
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-rating"></i>Ratings</a>
+							<a href=""><i class="_icon-rating"></i>Ratings
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-company"></i>Insurance companies</a>
+							<a href=""><i class="_icon-company"></i>Insurance companies
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-star"></i>Special offers</a>
+							<a href=""><i class="_icon-star"></i>Special offers
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-lower"></i>Insurance lawyer</a>
+							<a href=""><i class="_icon-lower"></i>Insurance lawyer
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -73,19 +85,29 @@
 					<header class="linkinator-header title">Finances</header>
 					<ul class="linkinator-body">
 						<li>
-							<a href="#"><i class="_icon-services"></i>Services</a>
+							<a href="#"><i class="_icon-services"></i>Services
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-feedback"></i>Feedbacks</a>
+							<a href="#"><i class="_icon-feedback"></i>Feedbacks
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-rating"></i>Ratings</a>
+							<a href="#"><i class="_icon-rating"></i>Ratings
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-banklandmark"></i>Banks</a>
+							<a href="#"><i class="_icon-banklandmark"></i>Banks
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-star"></i>Special offers</a>
+							<a href="#"><i class="_icon-star"></i>Special offers
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 					</ul>
 				</div>
@@ -93,16 +115,24 @@
 					<header class="linkinator-header title">New Services</header>
 					<ul class="linkinator-body">
 						<li>
-							<a href="#"><i class="_icon-house"></i>OSAGO</a>
+							<a href="#"><i class="_icon-house"></i>OSAGO
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-baggage"></i>Travel insurance</a>
+							<a href="#"><i class="_icon-baggage"></i>Travel insurance
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-icon-portmone"></i>Loans</a>
+							<a href="#"><i class="_icon-icon-portmone"></i>Loans
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-bank-box"></i>Bank cells</a>
+							<a href="#"><i class="_icon-bank-box"></i>Bank cells
+								<i class="_icon-angle-right"></i>
+							</a>
 						</li>
 					</ul>
 				</div>
