--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,18 @@
 	<div class="wrapper">
 		<header class="main-header">
 			<div class="main-header__wrapper">
-				<a class="brand-logo">
+				<a class="brand-logo element_1">
 					<img src="/src/img/logo.png" alt="Logo FinStore">
 				</a>
-				<div class="consult-chat">
+				<div class="consult-chat element_2">
 					<i class="_icon-chat"></i>
 					<a href="#" class="link-consult-chat">My financial consultant</a>
 				</div>
-				<div class="dropdown">
-					<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44</a>
+				<div class="dropdown element_3">
+					<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44 <i class="_icon-down-arrow"></i></a>
 				</div>
-				<a href="#" class="one-click-order">One click order</a>
-				<div class="search">
+				<a href="#" class="one-click-order element_4">One click order</a>
+				<div class="search element_5">
 					<i class="_icon-search"></i>
 				</div>
 			</div>
