hero block,  benefits-section, about-project, part footer block

--- a/src/index.html
+++ b/src/index.html
@@ -9,40 +9,45 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header class="main-header">
-			<div class="main-header__wrapper">
-				<a class="brand-logo element_1">
-					<img src="/src/img/logo.png" alt="Logo FinStore">
-				</a>
-				<div class="consult-chat element_2">
-					<i class="_icon-chat"></i>
-					<a href="#" class="link-consult-chat">My financial consultant</a>
+		<header class= "main-header">
+			<div class="_conteiner">
+				<div class="main-header__wrapper">
+					<a class="brand-logo element_1">
+						<img src="/src/img/logo.png" alt="Logo FinStore">
+					</a>
+					<div class="consult-chat element_2">
+						<i class="_icon-chat"></i>
+						<a href="#" class="link-consult-chat">My financial consultant</a>
+					</div>
+					<div class="dropdown element_3">
+						<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44 <i class="_icon-arrow-down-2"></i></a>
+					</div>
+					<a href="#" class="one-click-order element_4">One click order</a>
+					<div class="search element_5">
+						<i class="_icon-search"></i>
+					</div>
 				</div>
-				<div class="dropdown element_3">
-					<a href="tel:067-344-44-44" class="consult-cell-phone"><i class="_icon-phone"></i>067-344-44-44 <i class="_icon-down-arrow"></i></a>
-				</div>
-				<a href="#" class="one-click-order element_4">One click order</a>
-				<div class="search element_5">
-					<i class="_icon-search"></i>
-				</div>
+				<nav class="main-nav">
+					<a href="#" class="main-nav__btn">Insurance</a>
+					<a href="#" class="main-nav__btn">Finances</a>
+					<a href="#" class="main-nav__link">Feedbacks</a>
+					<a href="#" class="main-nav__link">News</a>
+				</nav>
 			</div>
-			<nav class="main-nav">
-				<a href="#" class="main-nav__btn">Insurance</a>
-				<a href="#" class="main-nav__btn">Finances</a>
-				<a href="#" class="main-nav__link">Feedbacks</a>
-				<a href="#" class="main-nav__link">News</a>
-			</nav>
 		</header>
-		<main class="main-content">
+		<main class="main-content _conteiner">
 			<div class="hero-block">
 				<ul class="hero-block-nav">
-					<li><a href=""><i class="icon-"></i>OSAGO</a></li>
-					<li><a href=""><i class="icon-"></i>Tourism insurance</a></li>
-					<li><a href=""><i class="icon-"></i>Credits</a></li>
-					<li><a href=""><i class="icon-"></i>Bank cells</a></li>
-					<li><a href=""><i class="icon-"></i>Green card</a></li>
+					<li><a href=""><i class="_icon-car2"></i>OSAGO</a></li>
+					<li><a href=""><i class="_icon-baggage1"></i>Tourism insurance</a></li>
+					<li><a href=""><i class="_icon-icon-portmone"></i>Credits</a></li>
+					<li><a href=""><i class="_icon-bank-box"></i>Bank cells</a></li>
+					<li><a href=""><i class="_icon-file"></i>Green card</a></li>
 				</ul>
-				<p>Compare </br> and buy the best solution</p>
+				<p>
+					<span class="text-background text-size">Compare</span>
+					<span class="text-background"><span> and <span class="text-size">buy</span> the best solution</span>
+				</p>
 			</div>
 
 			<div class="services-section">
@@ -120,7 +125,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#"><i class="_icon-baggage"></i>Travel insurance
+							<a href="#"><i class="_icon-baggage1"></i>Travel insurance
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
@@ -138,27 +143,64 @@
 				</div>
 			</div>
 
-			<div>
-				<div>
-					<div class="title"></div>
+			<div class="benefits-section">
+				<div class="benefits-body">
+					<div class="title">Benefits</div>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li><i class="_icon-star-full"></i><span class="text-size">Compare and choose</span> the best solution in one place.</li>
+						<li><i class="_icon-star-full"></i><span class="text-size">Reliable</span> and proven <span class="text-size">companies.</span></li>
+						<li><i class="_icon-star-full"></i><span class="text-size">Making a policy</span> or loan no more than <span class="text-size">7 minutes.</span></liclass=>
+						<li><i class="_icon-star-full"></i><span class="text-size"></span>100% privacy guarantee.</li>
 					</ul>
 				</div>
-				<p>You save your money with us</p>
+				<div class="benefits-text">
+					<span>You <span class="text-size"> save your money</span> with us</span>
+				</div>
 			</div>
 
 			<div class="about-project">
-				<div class="title"></div>
-				<p></p>
-				<p></p>
-				<p></p>
+				<div class="title">About project</div>
+				<p>Add important text about the project. Contains information about the company, registration data, information about shareholders, profitability and profitability, contact information.</p>
+				<p>Statement of financial position, statement of financial results, dynamics of changes in key indicators.</p>
+				<p>Complete company report from the Finstore database. Includes information about the company, registration data, information about shareholders, profitability and profitability, contact details, balance sheet, income statement, dynamics of changes in key indicators.</p>
 			</div>
 		</main>
-		<footer class="main-footer">Я футер :)
+		<footer class="main-footer">
+			<div class="footer-wrapper _conteiner">
+				<div class="footer-nav">
+					<ul>
+						<li>Insurance</li>
+						<li>Finance</li>
+						<li>Tenders</li>
+						<li>Partners</li>
+					</ul>
+				</div>
+				<div class="footer-links">
+					<a href="#" class="footer-link">About project</a>
+					<a href="#" class="footer-link">Contacts</a>
+					<a href="#" class="footer-link footer-link_margin">Shipping and payment</a>
+					<a href="mailto:info@fintstore.ua" class="footer-link footer-link-email">info@fintstore.ua</a>
+					<div class="footer-link-cellphone">
+						<i class="_icon-phone"></i>
+						<a href="tel:0673444444">067 344-44-44</a>
+					</div>
+				</div>
+				<div class="footer-social-media">
+					<p class="footer-text">Recommendations of financial market experts</p>
+					<form class="form" action="#" method="post">
+						<div class="form-field">
+							<input class="form-input" type="email" name="Email" placeholder="Email" required>
+						</div>
+						<button type="submit" class="form-button">Receive weekly</button>
+					</form>
+					<p class="footer-subtext">You can unsubscribe at any time. No spam.</p>
+					<div class="social-media">
+						<a href="#"><i class="_icon-facebook"></i></a>
+						<a href="#"><i class="_icon-twitter-b"></i></a>
+						<a href="#"><i class="_icon-email"></i></a>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
