--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
 					<li><a href=""><i class="_icon-file"></i>Green card</a></li>
 				</ul>
 				<p>
-					<span class="text-background text-size">Compare</span>
-					<span class="text-background"><span> and <span class="text-size">buy</span> the best solution</span>
+					<span class="text-background text-weight">Compare</span>
+					<span class="text-background"><span> and <span class="text-weight">buy</span> the best solution</span>
 				</p>
 			</div>
 
@@ -147,14 +147,14 @@
 				<div class="benefits-body">
 					<div class="title">Benefits</div>
 					<ul>
-						<li><i class="_icon-star-full"></i><span class="text-size">Compare and choose</span> the best solution in one place.</li>
-						<li><i class="_icon-star-full"></i><span class="text-size">Reliable</span> and proven <span class="text-size">companies.</span></li>
-						<li><i class="_icon-star-full"></i><span class="text-size">Making a policy</span> or loan no more than <span class="text-size">7 minutes.</span></liclass=>
-						<li><i class="_icon-star-full"></i><span class="text-size"></span>100% privacy guarantee.</li>
+						<li><i class="_icon-star-full"></i><span class="text-weight">Compare and choose</span> the best solution in one place.</li>
+						<li><i class="_icon-star-full"></i><span class="text-weight">Reliable</span> and proven <span class="text-weight">companies.</span></li>
+						<li><i class="_icon-star-full"></i><span class="text-weight">Making a policy</span> or loan no more than <span class="text-weight">7 minutes.</span></liclass=>
+						<li><i class="_icon-star-full"></i><span class="text-weight"></span>100% privacy guarantee.</li>
 					</ul>
 				</div>
 				<div class="benefits-text">
-					<span>You <span class="text-size"> save your money</span> with us</span>
+					<span>You <b> save your money</b> with us</span>
 				</div>
 			</div>
 
@@ -168,12 +168,97 @@
 		<footer class="main-footer">
 			<div class="footer-wrapper _conteiner">
 				<div class="footer-nav">
-					<ul>
-						<li>Insurance</li>
-						<li>Finance</li>
-						<li>Tenders</li>
-						<li>Partners</li>
-					</ul>
+					<div class="tabs">
+						<div class="tabs-items">
+							<a href="#tab-01" class="tabs-item"><span>Insurance</span></a>
+							<a href="#tab-02" class="tabs-item"><span>Finance</span></a>
+							<a href="#tab-03" class="tabs-item"><span>Tenders</span></a>
+							<a href="#tab-04" class="tabs-item"><span>Partners</span></a>
+						</div>
+						<div class="tabs-body">
+							<div id="tab-01" class="tabs-block">
+								<div class="tabs-block-wrapper">
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Auto</a></li>
+										<li class="tabs-block-link"><a href="#">Tourism</a></li>
+										<li class="tabs-block-link"><a href="#">Properties</a></li>
+										<li class="tabs-block-link"><a href="#">Accident</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
+										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
+										<li class="tabs-block-link"><a href="#">Specialists</a></li>
+										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">CASCO</a></li>
+										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									</ul>
+								</div>
+							</div>
+							<div id="tab-02" class="tabs-block">
+								<div class="tabs-block-wrapper">
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Fin Auto</a></li>
+										<li class="tabs-block-link"><a href="#">FinTourism</a></li>
+										<li class="tabs-block-link"><a href="#">Properties</a></li>
+										<li class="tabs-block-link"><a href="#">Accident</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
+										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
+										<li class="tabs-block-link"><a href="#">Specialists</a></li>
+										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">CASCO</a></li>
+										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									</ul>
+								</div>
+							</div>
+							<div id="tab-03" class="tabs-block">
+								<div class="tabs-block-wrapper">
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Tenders</a></li>
+										<li class="tabs-block-link"><a href="#">Tenders</a></li>
+										<li class="tabs-block-link"><a href="#">Properties</a></li>
+										<li class="tabs-block-link"><a href="#">Accident</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
+										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
+										<li class="tabs-block-link"><a href="#">Specialists</a></li>
+										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">CASCO</a></li>
+										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									</ul>
+								</div>
+							</div>
+							<div id="tab-04" class="tabs-block">
+								<div class="tabs-block-wrapper">
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Partners</a></li>
+										<li class="tabs-block-link"><a href="#">Partners</a></li>
+										<li class="tabs-block-link"><a href="#">Properties</a></li>
+										<li class="tabs-block-link"><a href="#">Accident</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
+										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
+										<li class="tabs-block-link"><a href="#">Specialists</a></li>
+										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									</ul>
+									<ul class="tabs-block-menu">
+										<li class="tabs-block-link"><a href="#">CASCO</a></li>
+										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									</ul>
+								</div>
+							</div>
+							
+						</div>
+					</div>
 				</div>
 				<div class="footer-links">
 					<a href="#" class="footer-link">About project</a>
