--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
 			</div>
 		</header>
 		<main class="main-content _conteiner">
+			<a href="#" class="online-chat">
+				<i class="online-chat-picture _icon-chat">
+				</i>
+				<p class="online-chat-text">Online chat</p>
+			</a>
 			<div class="hero-block">
 				<ul class="hero-block-nav">
 					<li><a href=""><i class="_icon-car2"></i>OSAGO</a></li>
