--- a/src/index.html
+++ b/src/index.html
@@ -175,14 +175,13 @@
 				<div class="footer-nav">
 					<div class="tabs">
 						<div class="tabs-items">
-							<a href="#tab-01" class="tabs-item"><span>Insurance</span></a>
-							<a href="#tab-02" class="tabs-item"><span>Finance</span></a>
-							<a href="#tab-03" class="tabs-item"><span>Tenders</span></a>
-							<a href="#tab-04" class="tabs-item"><span>Partners</span></a>
+							<a href="#tab-01" class="tabs-item is-active">Insurance</a>
+							<a href="#tab-02" class="tabs-item">Finance</a>
+							<a href="#tab-03" class="tabs-item">Tenders</a>
+							<a href="#tab-04" class="tabs-item">Partners</a>
 						</div>
 						<div class="tabs-body">
 							<div id="tab-01" class="tabs-block">
-								<div class="tabs-block-wrapper">
 									<ul class="tabs-block-menu">
 										<li class="tabs-block-link"><a href="#">Auto</a></li>
 										<li class="tabs-block-link"><a href="#">Tourism</a></li>
@@ -199,10 +198,8 @@
 										<li class="tabs-block-link"><a href="#">CASCO</a></li>
 										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
 									</ul>
-								</div>
 							</div>
 							<div id="tab-02" class="tabs-block">
-								<div class="tabs-block-wrapper">
 									<ul class="tabs-block-menu">
 										<li class="tabs-block-link"><a href="#">Fin Auto</a></li>
 										<li class="tabs-block-link"><a href="#">FinTourism</a></li>
@@ -219,10 +216,8 @@
 										<li class="tabs-block-link"><a href="#">CASCO</a></li>
 										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
 									</ul>
-								</div>
 							</div>
 							<div id="tab-03" class="tabs-block">
-								<div class="tabs-block-wrapper">
 									<ul class="tabs-block-menu">
 										<li class="tabs-block-link"><a href="#">Tenders</a></li>
 										<li class="tabs-block-link"><a href="#">Tenders</a></li>
@@ -239,10 +234,8 @@
 										<li class="tabs-block-link"><a href="#">CASCO</a></li>
 										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
 									</ul>
-								</div>
 							</div>
 							<div id="tab-04" class="tabs-block">
-								<div class="tabs-block-wrapper">
 									<ul class="tabs-block-menu">
 										<li class="tabs-block-link"><a href="#">Partners</a></li>
 										<li class="tabs-block-link"><a href="#">Partners</a></li>
@@ -259,7 +252,6 @@
 										<li class="tabs-block-link"><a href="#">CASCO</a></li>
 										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
 									</ul>
-								</div>
 							</div>
 							
 						</div>
